2009-03-20 Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gopen.m: Extend to open URLs as well as files.

2009-03-20 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSOutlineView.m (-drawRow:clipRect:): Changed order of
	expresions in condition to avoid possible access to uninitialized
	memory.
	* Source/NSScrollView.m (-initWithCoder:): Don't set _hasCornerView.

2009-03-18 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSWorksace.m: ([openURL:]) fix to open some app which
	supports the URL scheme.

2009-03-18 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (-beginPageInRect:atPlacement:): Add parentheses
	to stop compiler from complaining.

2009-03-16 03:29-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSToolbarView.m: Added code to save the configuration when
	deleting an item as well as saving an item.
	* Source/NSToolbarFrameworkPrivate.h: removed old _loadConfig method
	added new methods to track changes to toolbars.
	* Source/NSToolbar.m: Added check for items already in the toolbar,
	removed calls to _loadConfig which were commented out, implemented
	setConfigurationFromDictionary: as described in the documentation,
	changed _build to get dictionary from defaults if it's there. 
	Implemented new method _containsItemWithIdentifier: and 
	_itemsFromConfig.

2009-03-16 01:22-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSToolbarView.m: Call the _insertItemWithItemIdentifier:..
	method to add items when they are not being dragged from within 
	the toolbar and are being added from the palette.
	* Source/NSToolbarItem.m: Added information to the description
	to help with debugging.

2009-03-15 18:37-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSScrollView.m: Fix for infinite notification loop which 
	happens with some nib files.

2009-03-15 22:09-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSScrollView.m: Use the flags in initWithCoder:
